# kde-quicklook

./: CMakeLists.txt  Makefile  README.md
desktop/: dolphin-quicklook.desktop  quicklook-app.desktop
scripts/: dolphin-quicklook.sh
src/: CMakeLists.txt  quicklook.cpp  quicklook.moc
